[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/lootBox_off.png" type="Texture" id=1]
[ext_resource path="res://assets/images/lootBox_on.png" type="Texture" id=2]
[ext_resource path="res://scenes/LootBox.gd" type="Script" id=3]
[ext_resource path="res://assets/images/lootBox_tab.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "lootBox_open"
tracks/0/type = "value"
tracks/0/path = NodePath("tab1:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("tab2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "lootBox_rotating"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="LootBox" type="Area2D" groups=[
"lootbox",
]]
script = ExtResource( 3 )

[node name="col" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="tab1" type="Sprite" parent="col"]
position = Vector2( -9, -13 )
scale = Vector2( 0.8, 1 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -0.5, -2.5 )

[node name="tab2" type="Sprite" parent="col"]
position = Vector2( 9, -13 )
scale = Vector2( 0.8, 1 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -11.5, -2.5 )

[node name="box" type="AnimatedSprite" parent="col"]
frames = SubResource( 2 )
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="col"]
autoplay = "lootBox_rotating"
anims/lootBox_open = SubResource( 3 )
anims/lootBox_rotating = SubResource( 4 )
anims/lootBox_vanish = SubResource( 5 )

[node name="hasJustSpawnedTimer" type="Timer" parent="."]

[node name="randomPointPos" type="Position2D" parent="."]

[connection signal="animation_finished" from="col/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="hasJustSpawnedTimer" to="." method="_on_hasJustSpawnedTimer_timeout"]
